--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,10 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.converters.preferred-json-mapper=jackson
 
+spring.messages.encoding=UTF-8
+
+
+
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
@@ -30,3 +34,5 @@ spring.servlet.multipart.max-request-size=50MB
 
 spring.liquibase.change-log=classpath:db.xml
 spring.liquibase.enabled=true
+
+spring.messages.basename=i18n/messages
